[gd_scene load_steps=5 format=3 uid="uid://brusfv3prdi2o"]

[ext_resource type="PackedScene" uid="uid://cy1f7nq6lt4d" path="res://Scenes/Enemies/Ghost.tscn" id="1_8edfu"]
[ext_resource type="Script" path="res://Scripts/Enemies/Teleporting Ghost.gd" id="2_ark64"]
[ext_resource type="Texture2D" uid="uid://b4pqvgcs71wtg" path="res://Sprites/WispPurple-sheet.png" id="3_ik7sf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_laccb"]
radius = 66.0

[node name="Teleporting Ghost" instance=ExtResource("1_8edfu")]
script = ExtResource("2_ark64")

[node name="Sprite2D" parent="." index="0"]
texture = ExtResource("3_ik7sf")
hframes = 5
vframes = 2

[node name="DetectionArea" type="Area2D" parent="." index="4" groups=["Enemy"]]
visible = false
collision_layer = 0
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea" index="0"]
shape = SubResource("CircleShape2D_laccb")

[node name="CooldownTimer" type="Timer" parent="." index="5"]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
